# crystal

./: .gitmodules  CMakeLists.txt  README.md
src/: Crystal.hpp  Location.hpp  Machine.cpp  Machine.hpp  Machine.inl  Slave.hpp  SlavePool.hpp
src/local/: Barrier.hpp  Barrier.inl  ExecutionUnit.cpp  ExecutionUnit.hpp  Job.cpp  Job.hpp  Job.inl  Machine.cpp  Machine.hpp  Paralleliser.cpp  Paralleliser.hpp  Paralleliser.inl  SlavePool.cpp  SlavePool.hpp  SlavePool.inl
src/outside/: Machine.hpp
src/remote/: Machine.cpp  Machine.hpp  Machine.inl  SerialisedConnection.cpp  SerialisedConnection.hpp  SerialisedConnection.inl  SlavePool.hpp
src/self/: Barrier.cpp  Barrier.hpp  Barrier.inl  ExecutionUnit.cpp  ExecutionUnit.hpp  ExecutionUnit.inl  Job.cpp  Job.hpp  Job.inl  Machine.cpp  Machine.hpp  Paralleliser.cpp  Paralleliser.hpp  Paralleliser.inl  Spinner.cpp  Spinner.hpp  self.hpp
src/util/: BoundedQueue.hpp  BoundedQueue.inl  ByteOrder.cpp  ByteOrder.hpp  ByteOrder.inl  Deserialiser.hpp  Deserialiser.inl  Latency.hpp  Latency.inl  SerialisedFile.cpp  SerialisedFile.hpp  SerialisedFile.inl  Serialiser.cpp  Serialiser.hpp  Serialiser.inl
